[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-import-export"
version = "0.1.1"
description = "A reusable base library for importing and exporting data with FastAPI."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "MIT"
authors = [{ name = "li", email = "lijianqiao2906@live.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = ["fastapi>=0.128.4", "pydantic>=2.12.5"]

[project.urls]
github = "https://github.com/lijianqiao/fastapi-import-export"
Issues = "https://github.com/lijianqiao/fastapi-import-export/issues"

[project.optional-dependencies]
polars = ["polars>=1.38.1"]
xlsx = ["openpyxl>=3.1.5"]
storage = ["uuid6>=2025.0.1"]
full = [
    "polars>=1.38.1",
    "openpyxl>=3.1.5",
    "uuid6>=2025.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".git", "__pycache__", ".venv", ".vscode"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "W191"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
