[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-import-export"
dynamic = ["version"]
description = "A reusable base library for importing and exporting data with FastAPI."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "MIT"
authors = [{ name = "lijianqiao", email = "lijianqiao2906@live.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
keywords = ["fastapi", "import", "export", "csv", "xlsx", "polars"]
dependencies = ["fastapi>=0.128.4", "pydantic>=2.12.5"]

[project.urls]
Homepage = "https://github.com/lijianqiao/fastapi-import-export"
Source = "https://github.com/lijianqiao/fastapi-import-export"
Issues = "https://github.com/lijianqiao/fastapi-import-export/issues"

[project.optional-dependencies]
polars = ["polars>=1.38.1"]
xlsx = ["openpyxl>=3.1.5", "fastexcel>=0.19.0", "xlsxwriter>=3.2.9"]
storage = ["uuid6>=2025.0.1"]
full = [
    "polars>=1.38.1",
    "openpyxl>=3.1.5",
    "fastexcel>=0.19.0",
    "xlsxwriter>=3.2.9",
    "uuid6>=2025.0.1",
]

[tool.setuptools.dynamic]
version = { attr = "fastapi_import_export.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fastapi_import_export = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".git", "__pycache__", ".venv", ".vscode"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "W191"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests", "examples"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
e2e = [
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.46",
    "aiosqlite>=0.21.0",
    "sqlmodel>=0.0.24",
    "tortoise-orm>=0.25.0",
]
